Fix Sonar warning